@@ -1,6 +1,7 @@
 Version 3.1.2 To be released
 ============================
 BUG: Ticket#719 - TAutoCompleter should not trigger Validation if CausesValidation=False (Christophe)
+BUG: Ticket#750 - The "expire" parameter is used inconsistently in cache modules (Qiang)
 CHG: Changed TConditional so that the controls in its template behave like they are in its parent (Qiang)
 CHG: Active Record many-to-many relationship change from self::HAS_MANY to self::MANY_TO_MANY (Wei)
 CHG: Active Record no longer automatically performs adding/removing/updating related objects (Qiang)
